--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -238,17 +238,5 @@
   "dropdownSelectProofOfAddress": "Select the type of document",
   "userDataSuccessSend": "Personal data sent correctly",
   "companyIncorporationFile": "Documents of Incorporation of the company",
-  "endDateGreaterStartDate": "End date must be greater than start date",
-  "bankAccountHolder": "Bank account holder",
-  "ourFee": "Our fee",
-  "hasReceived": "Has received",
-  "transactionNumber": "Transaction number",
-  "newTransfer": "New transfer",
-  "youSend": "You send",
-  "transactionReceipt": "Transaction receipt",
-  "receiverAccount": "Receiver account",
-  "senderAccount": "Sender account",
-  "senderAccountId": "Sender account",
-  "beneficiaryName": "Beneficiary name",
-  "userName": "Sender name"
+  "endDateGreaterStartDate": "End date must be greater than start date"
 }
