--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -242,5 +242,6 @@
   "senderAccount": "Cuenta emisora",
   "senderAccountId": "Cuenta emisora",
   "beneficiaryName": "Nombre del beneficiario",
-  "userName": "Nombre del emisor"
+  "userName": "Nombre del emisor",
+  "warningAssetNetwork": "Asegurese de seleccionar la red ERC20 para el momento de enviar monedas a esta address"
 }
