--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -250,5 +250,6 @@
   "senderAccount": "Sender account",
   "senderAccountId": "Sender account",
   "beneficiaryName": "Beneficiary name",
-  "userName": "Sender name"
+  "userName": "Sender name",
+  "withdrawEmailConfirmation": "You will receive an email to confirm the withdraw"
 }
