[FEAT] Showing the message: "You will receive an email to confirm the withdraw"

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -251,5 +251,6 @@
   "senderAccountId": "Sender account",
   "beneficiaryName": "Beneficiary name",
   "userName": "Sender name",
-  "withdrawEmailConfirmation": "You will receive an email to confirm the withdraw"
+  "withdrawEmailConfirmation": "You will receive an email to confirm the withdraw",
+  "orderCompleted": "Order completed"
 }
