--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -251,5 +251,6 @@
   "senderAccountId": "Sender account",
   "beneficiaryName": "Beneficiary name",
   "userName": "Sender name",
-  "warningAssetNetwork": "Make sure to select {networkName} network when sending tokens to this address"
+  "warningAssetNetwork": "Make sure to select {networkName} network when sending tokens to this address",
+  "viewAddress": "View address"
 }
