[WIP] Check for names before continuing

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -253,5 +253,6 @@
   "userName": "Sender name",
   "viewDetails": "View details",
   "withdrawEmailConfirmation": "You will receive an email to confirm the withdraw",
-  "orderCompleted": "Order completed"
+  "orderCompleted": "Order completed",
+  "businessPartners": "Business partners"
 }
