--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -251,7 +251,7 @@
   "senderAccountId": "Sender account",
   "beneficiaryName": "Beneficiary name",
   "userName": "Sender name",
-  "warningAssetNetwork": "Make sure to select ERC20 network when sending tokens to this address"
+  "warningAssetNetwork": "Make sure to select ERC20 network when sending tokens to this address",
   "viewDetails": "View details",
   "withdrawEmailConfirmation": "You will receive an email to confirm the withdraw",
   "orderCompleted": "Order completed"
