--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -91,7 +91,7 @@
   "partnerTitle": "Shareholder data",
   "contact": "Contact",
   "loginTitle": "Registered users",
-  "loginSubtitle": "Welcome Please enter your details!",
+  "loginSubtitle": "Hello, welcome, please enter your information",
   "write": "Write",
   "labelCurrentPassword": "Type your current password",
   "labelNewPassword": "New password",
@@ -254,5 +254,6 @@
   "warningAssetNetwork": "Make sure to select ERC20 network when sending tokens to this address",
   "viewDetails": "View details",
   "withdrawEmailConfirmation": "You will receive an email to confirm the withdraw",
-  "orderCompleted": "Order completed"
+  "orderCompleted": "Order completed",
+  "passwordHelpText": "Introduce your password"
 }
