--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -253,6 +253,10 @@
   "textDownloadRecoveryCodes": "Puede usar códigos de recuperación como un segundo factor de autenticación en caso de que pierda el acceso a su dispositivo. nosotros recomendamos guardarlos en un administrador de contraseñas seguro como 1Password, Authy o Keeper",
   "alertRecoveryCodes": "Mantenga sus códigos de recuperación en un lugar seguro",
   "alertDetailRecoveryCodes": "Si pierde su dispositivo y no puede encontrar sus códigos de recuperación, perderá el acceso a su cuenta",
-  "btnSavedRecoveryCodes": "He guardado mis códigos de recuperación.",
-  "download": "Descargar"
+  "savedRecoveryCodes": "Has guardado tus códigos de recuperación.",
+  "download": "Descargar",
+  "activeTwoFactor": "Activar la autenticación de doble factor",
+  "yes": "Si",
+  "no": "No",
+  "recommendationSaveCodeRecovery": "Para activar el doble factor de autenticacion, por favor confirme que ha guardado los codigos de recuperacion."
 }
