--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -274,5 +274,7 @@
   "twoFactorActionOne": "Login in noba.cash",
   "twoFactorActionTwo": "Confirm withdrawals from your noba.cash account",
   "validVerifyCode" : "verification code cannot be empty",
-  "passwordHelpText": "Enter your password"
+  "passwordHelpText": "Enter your password",
+  "verifyCode": "Verificar código",
+  "enterCode": "Enter verification code"
 }
