feat: implementacion del doble factor de autenticacion en el login.
wip: remote config.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3,7 +3,7 @@
   "languageSelector": "Change language",
   "login": "Login",
   "backButtonTitle": "Back",
-  "noAccount": "Not Yet Registered?",
+  "noAccount": "Not yet registered?",
   "emailLabel": "Email",
   "emailPlaceholder": "you-emailcorporate.com",
   "passwordLabel": "Password",
