--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -283,5 +283,6 @@
   "requestRecoveryTwoFactorAuthBtn": "Hacer la solicitud",
   "twoFactorAuthText": "Ingrese el código de su aplicación de autenticación de dos factores. Si ha perdido su dispositivo, puede ingresar uno de sus códigos de recuperación.",
   "twoFactorAuthRecoveryText": "Recuperar autenticación de dos factores",
-  "twoFactorAuthCodeLabel": "Introduce el código de verificación"
+  "twoFactorAuthCodeLabel": "Introduce el código de verificación",
+  "addNewBeneficiary": "Agregar nueva billetera de beneficiario"
 }
