[FIX] Fixing referring link

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -260,7 +260,7 @@
   "beABusinessAllie1": "Be a business",
   "beABusinessAllie2": "partner",
   "requiredInformation": "Required information",
-  "referringName": "Referring name",
+  "referringName": "The name of who is referring you",
   "businessOpportunities1": "Business",
   "businessOpportunities2": "Opportunities",
   "id": "Id",
