--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -306,5 +306,6 @@
   "twoFactorAuthText": "Enter the code from your two-factor authenticator app. If you've lost your device, you can enter one of your recovery codes.",
   "twoFactorAuthRecoveryText": "Recover two-factor authentication",
   "twoFactorAuthCodeLabel": "Enter verification code",
-  "addNewOpportunity": "Add new business partner"
+  "addNewOpportunity": "Add new business opportunity",
+  "listOf": "List of"
 }
