--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -299,5 +299,6 @@
   "twoFactorAuthRecoveryText": "Recuperar autenticación de dos factores",
   "twoFactorAuthCodeLabel": "Introduce el código de verificación",
   "addNewBeneficiary": "Agregar nueva billetera de beneficiario",
-  "addNewOpportunity": "Agregar una nueva oportunidad de negocio"
+  "addNewOpportunity": "Agregar una nueva oportunidad de negocio",
+  "listOf": "Listado de "
 }
