--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -307,5 +307,8 @@
   "twoFactorAuthRecoveryText": "Recover two-factor authentication",
   "twoFactorAuthCodeLabel": "Enter verification code",
   "addNewOpportunity": "Add new business opportunity",
-  "listOf": "List of"
+  "listOf": "List of",
+  "thankYou": "Thank you",
+  "forYourInterest": "for your interest in the business partner program",
+  "yourRequest" : "Your request is in  process"
 }
