--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -300,5 +300,8 @@
   "twoFactorAuthCodeLabel": "Introduce el código de verificación",
   "addNewBeneficiary": "Agregar nueva billetera de beneficiario",
   "addNewOpportunity": "Agregar una nueva oportunidad de negocio",
-  "listOf": "Listado de "
+  "listOf": "Listado de",
+  "thankYou": "Gracias",
+  "forYourInterest": "por tu interes en el programa de opportunidades de negocios",
+  "yourRequest" : "Tu solicitud esta en proceso"
 }
