[WIP] Modal business

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -256,6 +256,7 @@
   "viewDetails": "View details",
   "withdrawEmailConfirmation": "You will receive an email to confirm the withdraw",
   "orderCompleted": "Order completed",
+  "businessPartner": "Business partner",
   "businessPartners": "Business partners",
   "beABusinessAllie1": "Be a business",
   "beABusinessAllie2": "partner",
