--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -248,6 +248,7 @@
   "viewDetails": "Ver detalles",
   "withdrawEmailConfirmation": "Enviaremos un email para confirmar el retiro",
   "orderCompleted": "Orden completada",
+  "businessPartner": "Aliado de negocios",
   "businessPartners": "Aliados de negocios",
   "beABusinessAllie1": "Convierte en aliado de",
   "beABusinessAllie2": "negocios",
