[FIX] typo en traduccion

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -306,6 +306,6 @@
   "thankYou": "Gracias",
   "forYourInterest": "por tu interes en el programa de opportunidades de negocios",
   "yourRequest" : "Tu solicitud esta en proceso",
-  "registeredSuccessfully": "You have registered successfully, now wait fo an admin to approve you",
+  "registeredSuccessfully": "Te has registrado exitosamente, espera la aprobación de un admin.",
   "temporaryBlockedTransfer": "Las trasnferencias a otros usuarios estan temporalmente bloqueadas."
 }
