--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -307,5 +307,6 @@
   "forYourInterest": "por tu interes en el programa de opportunidades de negocios",
   "yourRequest" : "Tu solicitud esta en proceso",
   "registeredSuccessfully": "Te has registrado exitosamente, espera la aprobación de un admin.",
-  "temporaryBlockedTransfer": "Las trasnferencias a otros usuarios estan temporalmente bloqueadas."
+  "temporaryBlockedTransfer": "Las trasnferencias a otros usuarios estan temporalmente bloqueadas.",
+  "viewAllTransactions": "Ver todas las transacciones"
 }
