[FIX] Placing format for extracted generated pdf

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -315,5 +315,6 @@
   "yourRequest" : "Your request is in  process",
   "registeredSuccessfully": "ou have registered successfully, now wait fo an admin to approve you",
   "temporaryBlockedTransfer": "Transfers to other users are temporarily not allowed",
-  "viewAllTransactions": "View all transactions"
+  "viewAllTransactions": "View all transactions",
+  "ownersName" : "Owner`s name"
 }
