--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -316,5 +316,6 @@
   "registeredSuccessfully": "ou have registered successfully, now wait fo an admin to approve you",
   "temporaryBlockedTransfer": "Transfers to other users are temporarily not allowed",
   "viewAllTransactions": "View all transactions",
-  "ownersName" : "Owner`s name"
+  "ownersName" : "Owner`s name",
+  "uploadDocuments": "Sube tus documentos para completar el proceso de registro, click aqui"
 }
