--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -309,5 +309,6 @@
   "registeredSuccessfully": "Te has registrado exitosamente, espera la aprobación de un admin.",
   "temporaryBlockedTransfer": "Las trasnferencias a otros usuarios estan temporalmente bloqueadas.",
   "viewAllTransactions": "Ver todas las transacciones",
-  "ownersName" : "Owner`s name"
+  "ownersName" : "Owner`s name",
+  "uploadDocuments": "Upload your documents to complete the sign up process, click here"
 }
