--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -312,5 +312,7 @@
   "ownersName": "Owner`s name",
   "informationAccountText": "Información de la cuenta",
   "beneficiaryInformation": "Información del beneficiario",
-  "bankAccountInformation": "Dirección del banco"
+  "bankAccountInformation": "Dirección del banco",
+  "warningDetailAllFieldRequired": "Por favor asegúrese de ingresar todos los campos"
+
 }
