add select to domestic and international

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -320,5 +320,6 @@
   "informationAccountText": "Account Information",
   "beneficiaryInformation": "Beneficiary information",
   "bankAccountInformation": "Bank address",
-  "warningDetailAllFieldRequired": "Please make sure you enter all fields"
+  "warningDetailAllFieldRequired": "Please make sure you enter all fields",
+  "iban": "IBAN"
 }
