fix in translates

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -317,7 +317,7 @@
   "temporaryBlockedTransfer": "Transfers to other users are temporarily not allowed",
   "viewAllTransactions": "View all transactions",
   "ownersName" : "Owner`s name",
-  "uploadDocuments": "Sube tus documentos para completar el proceso de registro, click aqui"
+  "uploadDocuments": "Sube tus documentos para completar el proceso de registro, click aqui",
   "informationAccountText": "Account Information",
   "beneficiaryInformation": "Beneficiary information",
   "bankAccountInformation": "Bank address",
