--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -310,7 +310,7 @@
   "temporaryBlockedTransfer": "Las trasnferencias a otros usuarios estan temporalmente bloqueadas.",
   "viewAllTransactions": "Ver todas las transacciones",
   "ownersName" : "Owner`s name",
-  "uploadDocuments": "Upload your documents to complete the sign up process, click here"
+  "uploadDocuments": "Upload your documents to complete the sign up process, click here",
   "informationAccountText": "Información de la cuenta",
   "beneficiaryInformation": "Información del beneficiario",
   "bankAccountInformation": "Dirección del banco",
