--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -317,5 +317,6 @@
   "warningDetailAllFieldRequired": "Por favor asegúrese de ingresar todos los campos",
   "iban": "IBAN",
   "domesticAccount": "Cuenta Nacional",
-  "internationalAccount": "Cuenta Internacional"
+  "internationalAccount": "Cuenta Internacional", 
+  "abaRoutingNumber": "Número de ruta ABA"
 }
