--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -326,5 +326,9 @@
   "domesticAccount": "Domestic Account",
   "internationalAccount": "International Account",
   "abaRoutingNumber": "ABA Routing number",
-  "intermediaryBank": "Intermediary Bank"
+  "intermediaryBank": "Intermediary Bank", 
+  "createAccount": "Create Account",
+  "subtitleCreateAccount": "Welcome, Please enter your information!",
+  "passwordConfirmLabel": "Repeat password",
+  "registerHelpTextPassword": "Your password must have at least: 1 capital letter, 1 special character, and a minimum of 8 characters in length."
 }
