--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -309,7 +309,7 @@
   "registeredSuccessfully": "Te has registrado exitosamente, espera la aprobación de un admin.",
   "temporaryBlockedTransfer": "Las trasnferencias a otros usuarios estan temporalmente bloqueadas.",
   "viewAllTransactions": "Ver todas las transacciones",
-  "ownersName" : "Owner`s name",
+  "ownersName": "Owner`s name",
   "uploadDocuments": "Upload your documents to complete the sign up process, click here",
   "informationAccountText": "Información de la cuenta",
   "beneficiaryInformation": "Información del beneficiario",
@@ -317,7 +317,11 @@
   "warningDetailAllFieldRequired": "Por favor asegúrese de ingresar todos los campos",
   "iban": "IBAN",
   "domesticAccount": "Cuenta Nacional",
-  "internationalAccount": "Cuenta Internacional", 
+  "internationalAccount": "Cuenta Internacional",
   "abaRoutingNumber": "Número de ruta ABA",
-  "intermediaryBank": "Banco intermediario"
+  "intermediaryBank": "Banco intermediario",
+  "createAccount": "Crear cuenta",
+  "subtitleCreateAccount": "Bienvenido ¡Por favor ingrese sus datos!",
+  "passwordConfirmLabel": "Repetir contraseña",
+  "registerHelpTextPassword": "Su contraseña debe tener minimo: 1 caracter en mayuscula, 1 caracter especial y una longitud minima de 8 caracteres."
 }
