--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -316,7 +316,7 @@
   "registeredSuccessfully": "ou have registered successfully, now wait fo an admin to approve you",
   "temporaryBlockedTransfer": "Transfers to other users are temporarily not allowed",
   "viewAllTransactions": "View all transactions",
-  "ownersName" : "Owner`s name",
+  "ownersName": "Owner`s name",
   "uploadDocuments": "Sube tus documentos para completar el proceso de registro, click aqui",
   "informationAccountText": "Account Information",
   "beneficiaryInformation": "Beneficiary information",
@@ -326,13 +326,17 @@
   "domesticAccount": "Domestic Account",
   "internationalAccount": "International Account",
   "abaRoutingNumber": "ABA Routing number",
-  "intermediaryBank": "Intermediary Bank", 
+  "intermediaryBank": "Intermediary Bank",
   "createAccount": "Create Account",
   "subtitleCreateAccount": "Welcome, Please enter your information!",
   "passwordConfirmLabel": "Repeat password",
   "registerHelpTextPassword": "Your password must have at least: 1 capital letter, 1 special character, and a minimum of 8 characters in length.",
-  "iAcceptConditions": "I accept the", 
+  "iAcceptConditions": "I accept the",
   "termsAndConditions": "Terms and Conditions",
   "andThe": "and the",
-  "privacyPolicy": "Privacy Policy"
+  "privacyPolicy": "Privacy Policy",
+  "accept": "Accept",
+  "deny": "Deny",
+  "iAcceptPatriot": "I accept the",
+  "patrioticLaw": "Patriot Act"
 }
